<resources>
    <string name="app_name">PhoneBook</string>
    <string name="button_edit">Edytuj</string>
    <string name="button_add">Dodaj</string>
    <string name="button_delete">Usuń</string>
    <string name="button_save">Zapisz</string>
    <string name="text_view_first_name">Imię</string>
    <string name="text_view_last_name">Nazwisko</string>
    <string name="text_view_phone_number">Numer telefonu</string>
    <string name="button_cancel">Anuluj</string>
    <string name="text_view_name">Imię i nazwisko</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>