<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactEdit"
    android:background="@color/background_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/button_add"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                android:backgroundTint="@color/green"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/button_cancel"
                android:textSize="20sp"
                tools:ignore="ButtonStyle"
                android:backgroundTint="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2"
                    android:text="@string/text_view_first_name"
                    android:textSize="20sp"
                    android:textColor="@color/light_green"/>

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="20sp"
                    android:focusable="true"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/text_view_first_name"
                    tools:ignore="LabelFor"
                    android:textColor="@color/light_green"
                    android:textColorHint="@color/hint_grey"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">
                <TextView
                    android:id="@+id/textViewLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_margin="5dp"
                    android:textSize="20sp"
                    android:text="@string/text_view_last_name"
                    android:textColor="@color/light_green"/>

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textSize="20sp"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:hint="@string/text_view_last_name"
                    android:textColor="@color/light_green"
                    android:textColorHint="@color/hint_grey"/>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPhoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/text_view_phone_number"
                    android:textColor="@color/light_green" />

                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:importantForAutofill="no"
                    android:textSize="20sp"
                    android:inputType="phone"
                    android:hint="@string/text_view_phone_number"
                    android:textColor="@color/light_green"
                    android:textColorHint="@color/hint_grey"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>